<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginTop="28dp"
        android:text="Calculadora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtNum1"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/txtNum2"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/txtNum1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtNum1"
        app:layout_constraintTop_toBottomOf="@+id/txtNum1" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="202dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/btnSumar"
        app:layout_constraintEnd_toEndOf="@+id/txtNum2"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="@+id/txtNum2"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="202dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnRestar"
        app:layout_constraintEnd_toEndOf="@+id/btnSumar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSumar"
        app:layout_constraintTop_toBottomOf="@+id/btnSumar" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="202dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnMultiplicar"
        app:layout_constraintEnd_toEndOf="@+id/btnRestar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnRestar"
        app:layout_constraintTop_toBottomOf="@+id/btnRestar" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="202dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnDividir"
        app:layout_constraintEnd_toEndOf="@+id/btnMultiplicar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnMultiplicar"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicar" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="124dp"
        android:layout_height="73dp"
        android:layout_marginTop="64dp"
        android:hint="@string/txtResultado"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/btnDividir"
        app:layout_constraintStart_toStartOf="@+id/btnDividir"
        app:layout_constraintTop_toBottomOf="@+id/btnDividir" />

</androidx.constraintlayout.widget.ConstraintLayout>